<resources>
    <string name="app_name">Music</string>

    <string name="navigation_drawer_open">Opened</string>
    <string name="navigation_drawer_close">Closed</string>

    <string name="action_settings">Settings</string>

    <!-- strings related to home screen -->
    <string name="label_home">Home</string>
    <string name="label_history">History</string>
    <string name="label_favorites">favorites</string>
    <string name="label_share">Share</string>
    <string name="label_sign_out">Sign out</string>

    <string name="no_searches">No searches</string>
    <string name="search_store">Your searches will be stored here</string>
    <string name="label_login">Login</string>

    <string name="hint_search">Enter keywords</string>
    <string name="text_label_search">Enter text below to search for a track from iTunes</string>
    <string name="error_search_text">Please enter a valid search parameter</string>
    <string name="label_search">Search</string>
    <string name="no_data">No data available for the search parameter.</string>
    <string name="search_results">Search Results</string>
</resources>
