<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/label_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@mipmap/ic_history_black_24dp"
            android:title="@string/label_history" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@mipmap/ic_favorite_black_24dp"
            android:title="@string/label_favorites" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/label_share" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/label_sign_out" />

    </group>

</menu>
