<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_label_search"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/button_margin"/>

    <EditText
        android:id="@+id/edittext_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search"
        android:layout_margin="@dimen/button_margin" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_search"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginEnd="@dimen/fifty_dp"
        android:layout_marginStart="@dimen/fifty_dp" />



</LinearLayout>